--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
-.App {
-  text-align: center;
+.container {
+    flex: 1 1 0%;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    padding: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.dropzone {
+    padding: 20px;
+    border-width: 2px;
+    border-radius: 2px;
+    border-color: rgb(238, 238, 238);
+    border-style: dashed;
+    background-color: rgb(250, 250, 250);
+    color: rgb(189, 189, 189);
+    outline: none;
+    transition: border 0.24s ease-in-out 0s;
+    margin: 0 auto;
+    text-align: center;
+    width: 80%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+aside {
+    display: flex;
+    flex-flow: row wrap;
+    margin-top: 16px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.thumbs-container {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.thumb {
+    width: 100%;
+    box-sizing: border-box;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.thumb-inner {
+    min-width: 0px;
+    overflow: hidden;
+}
+
+.image-preview {
+    display: block;
+    width: 100%;
+    height: 500px;
+}
+
+.errors {
+    color: red;
+}
+
+.comment-section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    gap:15px;
+}
+
+.comment {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+    flex-direction: column-reverse;
+}
+
+.form-container {
+    border: 1px solid #000000;
+    padding: 15px;
+}
+
+.textarea {
+    width: 100%;
+}
+
+.btn-group {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    gap:30px;
+}
+
+button{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+    align-items: center;
 }
